--- a/gb/23/2/26/n13938361.md
+++ b/gb/23/2/26/n13938361.md
@@ -29,37 +29,37 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936250.md#1">澳洲维州警察局将拆除所有中国制摄像头</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936806.md#1">澳洲前总理：应立即关闭境内孔子学院</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13936842.md#1">澳贸易部长：修复澳中关系仍需时间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/28/n14043358.md#1">上财年澳洲金融投诉量激增 达近9.7万起</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/28/n14043309.md#1">西悉尼壮年男横尸室内16岁女子被控谋杀</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063001.md#1">联邦议员将获得十年来最大幅度加薪</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14062994.md#1">1亿元飞行积分未披露 澳航被指“误导公众”</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/4/n11234388.md#1" target="_blank">【征文】文宇：科举千年兴衰录（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/3/7/n2454149.md#1" target="_blank">【热点互动】自焚  中共自导的梦魇(2)</a></li>
+<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/18/n10069025.md#1" target="_blank">杨宁：八路军为何大量购买治花柳病的药品？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/5/n11365941.md#1" target="_blank">【专访】澳参议员：制裁中共 不做迫害同谋</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/17/n14036151.md#1">释迦牟尼修得正果为何仍遭受果报？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/8/n14030745.md#1">【古道人生】为什么他知道儿子是来讨债的？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/15/n14034619.md#1">人一定能战胜天？“人定胜天”这么多年你都解释错了！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040988.md#1">女子过世时灵魂变光球离体 几天前曾见天使</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/19/n14038018.md#1">【未解之谜】深度解密：S4基地</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14043257.md#1">【新唐人快报】白纸2.0运动会师成都？当局维稳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/26/n14042513.md#1">【菁英论坛】秦刚案凸显习近平困境</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14043034.md#1">【远见快评】毛宁记者会尴尬 秦刚仕途未定论？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041779.md#1">【秦鹏观察】处理秦刚留后手 习难咽下一口气？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041818.md#1">太阳系边缘或隐藏着一颗巨大冰冻行星</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/26/n14041897.md#1">秦刚被免职 改王毅兼任外长 美国回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041825.md#1">刀郎新歌《罗刹海市》刷屏 歌词曲风令人惊艳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041711.md#1">不服一审判刑13年 吴亦凡强奸案二审开庭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041756.md#1">直呼父子年龄相差大 古巨基盼儿子早婚早育</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041417.md#1">巨石强森捐出史上最高捐款 美演员工会感激</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041340.md#1">孙艺真公开孩子手的照片 网友直呼“好可爱”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/23/n14040162.md#1">口疮让人苦不堪言？中医4招对付口腔溃疡、牙龈肿痛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/22/n14040052.md#1">DNA受伤让人变老 易致癌 名医教你护DNA最佳方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041456.md#1">最常见的11种梦靥 你经历过几种？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14041159.md#1">青壮年罹癌恐不自知 当心6种常见一级致癌物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/7/n14030318.md#1">想节税吗？善用这些税收减免帮你省荷包</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058703.md#1">二十四节气：秋天的第二个节气为何称“处暑”?</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058486.md#1">真实的宋代爱情故事：比苏东坡还深情，“瞎了我也爱你”的刘庭式</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060823.md#1">【未解之谜】“罗刹海市”中的聊斋故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058222.md#1">【未解之谜】朵洛莉丝催眠故事（1）昴宿星人移民地球？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061725.md#1">【人物真相】董经纬：埋在香港特务网的暗桩</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061790.md#1">【新闻五人行】永远是发展国家？习宣示梦失败</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061794.md#1">【菁英论坛】美国逮捕王振迪 活摘内幕能否揭开</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061754.md#1">习近平回国直奔新疆 会议中八次强调“稳定”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061643.md#1">分析：李强搞“逢迎政治”中共到最后一代</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061250.md#1">分析：福岛排核处理水 中共导演闹剧瞒真相</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062177.md#1">为李玟怒怼《好声音》甄妮被提醒注意安危</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062228.md#1">20年前涉及动物的一句话 金城武登微博热搜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061347.md#1">77岁狄龙车祸后首露面 精神奕奕为孙子庆生</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062128.md#1">美最长寿游戏类节目主持人去世 享耆寿99岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061824.md#1">简廷芮9月补办婚礼 公开婚照一对儿女都入镜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056469.md#1">最简单的养肝秘方 随时随地一招就灵</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060472.md#1">能量饮料让你提神？5副作用伤大脑 这类人要小心</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061952.md#1">专家分享5个习惯 可显着改善大脑健康</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059072.md#1">自制天然香草防蚊液 远离蚊子、蜱虫叮咬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062415.md#1">23年来最高房贷利率 美国买房最艰难时刻</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/26/n13938361.htm">澳航客户8亿元飞行积分年底将过期</a></p><hr>
