--- a/gb/21/11/5/n13354618.md
+++ b/gb/21/11/5/n13354618.md
@@ -27,36 +27,30 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/21/8/28/n13193576.md#1">江苏访民吴继新发出求救语音后失联</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/21/9/9/n13220755.md#1">江苏65岁访民骑自行车800公里进京维权</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/21/9/10/n13223740.md#1">骑自行车800公里进京维权 江苏访民被带走</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/15/n13907703.md#1">辽宁访民被警方以重复上访为由拘留七天</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063004.md#1">【翻墙必看】许家印背后的曾庆红浮出水面</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11241790.md#1" target="_blank">共产暴政录：柬共屠杀300万民众及30万华人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/20/n10923009.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（3）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/3/n11564392.md#1" target="_blank">凌晓辉：当代人类的天书（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/21/n10732313.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13902596.md#1">【未解之谜】珍妮预言之三 2037年进入新纪元？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13901111.md#1">【百年真相】以“亿元”计 中共十大贪官排行榜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13898887.md#1">乱世一书生 怎能拥有安定一城的能量？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904409.md#1">郑愚山：供销社的“大爷”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906403.md#1">因手术并发症濒死 男童一窥下辈子转生安排</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906615.md#1">【未解之谜】西方极乐世界游记（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906919.md#1">【十字路口】守日保台 美日新战术联合抗共</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906516.md#1">【中国禁闻】医院二次感染严重 民抢免疫蛋白活命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906069.md#1">多名中共警察密集死亡 最年轻者仅37岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906386.md#1">【新闻大家谈】王维洛：知青实名信 震惊党中央</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906323.md#1">攀上“高官女儿”云南公安局长给骗子数亿项目</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905708.md#1">称马国影星杨紫琼为香港演员 港共官员遭炮轰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906157.md#1">蓝心湄录除夕节目 与陈美凤唱跳秀少女穿搭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906509.md#1">75岁著名歌唱家谢莉斯去世 讣告未披露病因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906492.md#1">首度回应搬回香港原因 蔡少芬否认在沪豪宅放租</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905743.md#1">曾与金城武演父子 港星陈万雷在大陆染疫去世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900876.md#1">战胜感冒的5个最佳方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901669.md#1">不起眼的青柠有6大功效 甚至能救人一命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900963.md#1">千万别刚起床就喝咖啡！这时间点喝最好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904654.md#1">18个存钱小技巧 还能让你成为百万富翁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906422.md#1">每天吃的沙拉油安全吗？一动作增癌症、失智风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测中共病毒</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/5/n13354618.htm">江苏访民遭警察殴打 怒喊“打倒共产党”</a></p><hr>
